修复bug, 复制Nuui的实际运行代码

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.closebtn, .addClose::after {
+.YCdragCloneBtn, .addClose::after {
     position: absolute;
     right:3px;
     top:3px;
