ps: 不能以li子级div为拖动对象, 因为拖动的item不能有基础坐标参考点的变化, 不然就更加复杂了
这次进行了重要的修改, 对拖拽使用了setCSS方法, 而释放item后的滑动归位的动画效果使用animateSlide方法

--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
     background: lightcyan;
     text-align: center;
 }
-.junDrag .dragItem.active{
+.junDrag .dragItem.activeYCdrag{
     background: lightblue;
 }
-.junDrag .dragItem.active.host {
-    opacity: 0.3
+.YCdraggingItem {
+    opacity: 0.3;
 }
-.junDrag .dragItem.active.clone {
+.junDrag .dragItem.activeYCdrag.YCdragClone {
     opacity:1;
     position:relative;
     background: deepskyblue;
