--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.YCdragCloneBtn, .addClose::after {
+.YCdragCloseBtn, .addClose::after {
     position: absolute;
     right:3px;
     top:3px;
@@ -50,4 +50,20 @@
 }
 .addClose::after{
     content:"X";
+}
+
+.YCdragCloseBtnd{
+    position: absolute;
+    right:3px;
+    top:3px;
+    color: #ffffff;
+    width: 40px;
+    height:40px;
+    line-height: 40px;
+    border: 4px solid lightgray;
+    background: red;
+    font-size: 40px;
+    border-radius: 100%;
+    cursor: pointer;
+    z-index: 1000;
 }
