--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+*{padding:0; margin:0;}
 .DraggableMenu {
     list-style: none;
     position: relative;
@@ -38,19 +40,19 @@
 }
 
 .DraggableMenuCloseBtn, .addClose::after {
-    position: absolute;
-    right:3px;
-    top:3px;
-    color: #ffffff;
-    width: 40px;
-    height:40px;
-    line-height: 40px;
-    border: 4px solid lightgray;
-    background: lightcoral;
-    font-size: 40px;
-    border-radius: 100%;
-    cursor: pointer;
-    z-index: 1000;
+    /*position: absolute;*/
+    /*right:3px;*/
+    /*top:3px;*/
+    /*color: #ffffff;*/
+    /*width: 40px;*/
+    /*height:40px;*/
+    /*line-height: 40px;*/
+    /*border: 4px solid lightgray;*/
+    /*background: lightcoral;*/
+    /*font-size: 40px;*/
+    /*border-radius: 100%;*/
+    /*cursor: pointer;*/
+    /*z-index: 1000;*/
 }
 .addClose::after{
     content:"X";
