--- a/style.css
+++ b/style.css
@@ -7,24 +7,23 @@
 
 .DraggableMenu .dragItem{
     display: inline-block;
-
     min-width:200px;
     min-height: 200px;
     border:7px solid white;
     background: lightcyan;
     text-align: center;
 }
-.DraggableMenu .dragItem.activeDrMItem{
+.DraggableMenu .dragItem.DrM-activeItem{
     background: lightblue;
 }
-.DraggingItem {
+.DrM-reorderItem {
     opacity: 0.3;
 }
-.DraggingItem .DraggableMenuCloseBtn{
+.DrM-reorderItem .DrM-CloseBtn{
     opacity: 0;
 }
 
-.DraggableMenu .dragItem.activeDrMItem.DrM-DraggingItem {
+.DraggableMenu .dragItem.DrM-activeItem.DrM-DraggingItem {
     opacity:1;
     position:relative;
     background: deepskyblue;
@@ -39,26 +38,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.DraggableMenuCloseBtn, .addClose::after {
-    /*position: absolute;*/
-    /*right:3px;*/
-    /*top:3px;*/
-    /*color: #ffffff;*/
-    /*width: 40px;*/
-    /*height:40px;*/
-    /*line-height: 40px;*/
-    /*border: 4px solid lightgray;*/
-    /*background: lightcoral;*/
-    /*font-size: 40px;*/
-    /*border-radius: 100%;*/
-    /*cursor: pointer;*/
-    /*z-index: 1000;*/
-}
-.addClose::after{
-    content:"X";
-}
-
-.DraggableMenuCloseBtnd{
+.DrM-CloseBtnd{
     position: absolute;
     right:3px;
     top:3px;
