--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 .DraggableMenu .dragItem.DrM-activeItem{
     background: lightblue;
+    transition-duration:100ms;
 }
 .DrM-reorderItem {
     opacity: 0.3;
@@ -53,3 +54,44 @@
     cursor: pointer;
     z-index: 1000;
 }
+
+/*点击的动画效果*/
+
+.DrM-activeItem:not(.DrM-DraggingItem) {
+    animation:mymove 0.3s 0.2s;
+    -moz-animation:mymove 0.3s 0.2s ; /* Firefox */
+    -webkit-animation:mymove 0.3s 0.2s ; /* Safari and Chrome */
+    -o-animation:mymove 0.3s 0.2s ; /* Opera */
+}
+
+@keyframes mymove {
+    0%, 100% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}
+    50% {z-index:88; left:-10px;top:-10px; width:220px;height:220px;opacity: 0.3}
+}
+/*@keyframes mymove*/
+/*{*/
+    /*0% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}*/
+    /*70% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}*/
+    /*80% {z-index:88; left:-10px;top:-10px; width:220px;height:220px;opacity: 0.3}*/
+    /*90% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}*/
+    /*100% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}*/
+/*}*/
+
+/*@-moz-keyframes mymove /!* Firefox *!/*/
+/*{*/
+    /*0%   {z-index:88; width:200px;}*/
+    /*100% {z-index:88; width:300px;}*/
+/*}*/
+
+/*@-webkit-keyframes mymove /!* Safari 和 Chrome *!/*/
+/*{*/
+    /*0%   {z-index:88; width:200px;}*/
+    /*100% {z-index:88; width:300px;}*/
+/*}*/
+
+/*@-o-keyframes mymove /!* Opera *!/*/
+/*{*/
+    /*0%   {z-index:88; width:200px;}*/
+    /*100% {z-index:88; width:300px;}*/
+/*}*/
+
