--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 *{padding:0; margin:0;}
-.DraggableMenu {
+.draggableMenu {
     list-style: none;
     position: relative;
 }
 
-.DraggableMenu .dragItem{
+.draggableMenu .dragItem{
     display: inline-block;
     min-width:200px;
     min-height: 200px;
@@ -13,25 +13,25 @@
     background: lightcyan;
     text-align: center;
 }
-.DraggableMenu .dragItem.DrM-activeItem{
+.draggableMenu .dragItem.DrM-activeItem{
     background: lightblue;
     transition-duration:100ms;
 }
 .DrM-reorderItem {
     opacity: 0.3;
 }
-.DrM-reorderItem .DrM-CloseBtn{
+.DrM-reorderItem .DrM-closeBtn{
     opacity: 0;
 }
 
-.DraggableMenu .dragItem.DrM-activeItem.DrM-DraggingItem {
+.draggableMenu .dragItem.DrM-activeItem.DrM-draggingItem {
     opacity:1;
     position:relative;
     background: deepskyblue;
     z-index: 99;
 }
 
-.DraggableMenu .dragItem, .DraggableMenu {
+.draggableMenu .dragItem, .draggableMenu {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
@@ -39,7 +39,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.DrM-CloseBtnd{
+.DrM-closeBtn{
     position: absolute;
     right:3px;
     top:3px;
