--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 .draggableMenu {
     list-style: none;
     position: relative;
+
+    perspective: 62px;
 }
 
 .draggableMenu .dragItem{
@@ -57,23 +59,75 @@
 
 /*点击的动画效果*/
 
-.DrM-activeItem:not(.DrM-DraggingItem) {
-    animation:mymove 0.3s 0.2s;
-    -moz-animation:mymove 0.3s 0.2s ; /* Firefox */
-    -webkit-animation:mymove 0.3s 0.2s ; /* Safari and Chrome */
-    -o-animation:mymove 0.3s 0.2s ; /* Opera */
+.DrM-activeItem.DrM-reorderItem {
+    animation:zoomOutIn 0.5s;
+    -moz-animation:zoomOutIn 0.5s ; /* Firefox */
+    -webkit-animation:zoomOutIn 0.5s; /* Safari and Chrome */
+    -o-animation:zoomOutIn 0.5s; /* Opera */
 }
 .DrM-activeItem.DrM-DraggingItem {
-    animation:none 0s 0s;
-    -moz-animation:none 0s 0s ; /* Firefox */
-    -webkit-animation:none 0s 0s ; /* Safari and Chrome */
-    -o-animation:none 0s 0s ; /* Opera */
+    /*animation:none 0s 0s;*/
+    /*-moz-animation:none 0s 0s ; /!* Firefox *!/*/
+    /*-webkit-animation:none 0s 0s ; /!* Safari and Chrome *!/*/
+    /*-o-animation:none 0s 0s ; /!* Opera *!/*/
 }
 
-@keyframes mymove {
-    0%, 100% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}
-    50% {z-index:88; left:-10px;top:-10px; width:220px;height:220px;opacity: 0.3}
+/*@keyframes zoomOut {*/
+/*0%, 100% {z-index:1; transform: translate3d(0, 0, 0) scale3d(1, 1, 1); opacity: 1}*/
+/*50% {z-index:88; transform: translate3d(0, 0, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+
+
+@-webkit-keyframes zoomOutIn{
+    0%,100%{opacity:1; z-index:99; -webkit-transform:scale3d(1, 1, 1); transform:scale3d(1, 1, 1);}
+    50%{opacity:0.5; z-index:99; -webkit-transform:scale3d(1.2, 1.2, 1.2); transform:scale3d(1.2, 1.2, 1.2);}
 }
+
+/*.DrM-activeItem:nth-child(2){*/
+    /*animation:pos1 0.3s 0.2s;*/
+/*}*/
+/*.DrM-activeItem:nth-child(1){*/
+    /*animation:pos0 0.3s 0.2s;*/
+/*}*/
+
+/*@keyframes pos0 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(0, 0, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(0, 0, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos1 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(214px, 0, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(214px, 0, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos2 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(428px, 0, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(428px, 0, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos3 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(642px, 0, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(642px, 0, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+
+/*@keyframes pos4 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(0px, 214px, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(0px, 214px, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos5 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(214px, 214px, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(214px, 214px, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos6 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(428px, 214px, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(428px, 214px, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+/*@keyframes pos7 {*/
+    /*0%, 100% {z-index:1; transform: translate3d(642px, 214px, 0) scale3d(1, 1, 1); opacity: 1}*/
+    /*50% {z-index:88; transform: translate3d(642px, 214px, 0) scale3d(1.2, 1.2, 1.2); opacity: 0.3}*/
+/*}*/
+
+
+
+
+
 /*@keyframes mymove*/
 /*{*/
     /*0% {z-index:1; left:0; top:0; width:200px;height:200px;opacity: 1}*/
