--- a/style.css
+++ b/style.css
@@ -58,7 +58,10 @@
 }
 
 /*点击的动画效果*/
-
+.DrM-activeItem{
+    /*-webkit-transform:scale3d(1, 1, 1);*/
+    /*transform:scale3d(1, 1, 1);*/
+}
 .DrM-activeItem.DrM-reorderItem {
     /*animation:zoomOutIn 0.5s;*/
     /*-moz-animation:zoomOutIn 0.5s ; /!* Firefox *!/*/
@@ -66,6 +69,8 @@
     /*-o-animation:zoomOutIn 0.5s; /!* Opera *!/*/
 }
 .DrM-activeItem.DrM-DraggingItem {
+    -webkit-transform:scale3d(1.2, 1.2, 1.2);
+    transform:scale3d(1.2, 1.2, 1.2);
     /*animation:none 0s 0s;*/
     /*-moz-animation:none 0s 0s ; /!* Firefox *!/*/
     /*-webkit-animation:none 0s 0s ; /!* Safari and Chrome *!/*/
