准备修改关闭按钮的生成时间位置,
关闭按钮应该在初始化的时候都生成出来的, 在激活状态才显示, 这样一方面有利于性能的优化, 另方面有利于按钮的放大缩小的效果

--- a/style.css
+++ b/style.css
@@ -55,8 +55,14 @@
     border-radius: 100%;
     cursor: pointer;
     z-index: 1000;
-}
+    transform: scale3D(0,0,0);
+    transition-duration:200ms;
 
+}
+.DrM-activeItem .DrM-closeBtn{
+    transform: scale3D(1, 1, 1);
+
+}
 /*点击的动画效果*/
 .DrM-activeItem{
     /*-webkit-transform:scale3d(1, 1, 1);*/
