整理了一下, 关键的是要在拖拽前取消reorderItem的transition状态!!  取消它的过渡使得整体效果更好!

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@
     /*transform: scale3D(1, 1, 1);*/
 /*}*/
 
+.DrM-activeItem.DrM-reorderItem{opacity: 0.01}
+
 /*ԭʼֵ*/
 .DrM-activeItem .DrM-closeBtn, .DrM-closeBtn{transform: scale3D(0, 0, 0);}
 
